HotFix/Atualização de pastas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container page">
 		<div class="row barraSuperior">
 			<div class="col-xs-1">
-				<img src="imagens/logo.png" class="lagosLogo">
+				<img src="view/images/logo.png" class="lagosLogo">
 			</div>
 			<div class="col-xs-11" style="text-align: right;"><p></p>
 				<span class="lagosTexto">RESTAURANTE DOS LAGOS</span><br>
