--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>SENHAS - RESTAURANTE DOS LAGOS</title>
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="view/css/bootstrap.css" rel="stylesheet">
+	<link href="view/css/style.css" rel="stylesheet">
 	<script src="lib/jquery-3.3.1.min.js"></script>
 	<script src="lib/scripts.js"></script>
 </head>
