--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>SENHAS - RESTAURANTE DOS LAGOS</title>
-	<link href="view/css/bootstrap.css" rel="stylesheet">
-	<link href="view/css/style.css" rel="stylesheet">
+	<link href="assets/css/bootstrap.css" rel="stylesheet">
+	<link href="assets/css/style.css" rel="stylesheet">
 	<script src="lib/jquery-3.3.1.min.js"></script>
 	<script src="lib/scripts.js"></script>
 </head>
@@ -13,7 +13,7 @@
 	<div class="container page">
 		<div class="row barraSuperior">
 			<div class="col-xs-1">
-				<img src="view/images/logo.png" class="lagosLogo">
+				<img src="assets/images/logo.png" class="lagosLogo">
 			</div>
 			<div class="col-xs-11" style="text-align: right;"><p></p>
 				<span class="lagosTexto">RESTAURANTE DOS LAGOS</span><br>
@@ -43,6 +43,6 @@
 			</div>
 		</div>
 	</div>
-	<audio id="audioChamada" src="view/sound/call.wav"></audio>
+	<audio id="audioChamada" src="assets/sound/call.wav"></audio>
 </body>
 </html>
